Updated pom.xml files for fsp-anns-parent, api, and it